# tlang

./: CMakeLists.txt  grammars.md  test.tl
include/: compiler.h  error.h  lexer.h  parser.h
include/compiler/: errors.h
include/lexer/: tok_queue.h  tokens.h
include/parser/: parse_tree.h  parse_types.h
src/: compiler.c  lexer.c  lexer.re  main.c  parse_tree.c  parser.c  tok_queue.c
stdlib/: test.tl
